--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -356,6 +356,21 @@
             </objects>
             <point key="canvasLocation" x="22.137404580152669" y="-2.1126760563380285"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="VgT-nT-zhc">
+            <objects>
+                <viewController id="8aJ-lQ-sXX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uOS-u0-9j8">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="tmf-AT-geP"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YSV-yT-mMQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1056" y="-2"/>
+        </scene>
     </scenes>
     <designables>
         <designable name="4BF-qF-quF">
